final code format

--- a/library_exam/user_profile/templates/user_profile/profile.html
+++ b/library_exam/user_profile/templates/user_profile/profile.html
@@ -6,7 +6,8 @@
             <h3>{{ profile_user }}</h3>
             <p class="img"><img
                     src="{{ profile_user.image_url }}"
-                    alt="https://thumbs.dreamstime.com/b/profile-picture-vector-perfect-social-media-other-web-use-125320533.jpg"></p>
+                    alt="https://thumbs.dreamstime.com/b/profile-picture-vector-perfect-social-media-other-web-use-125320533.jpg">
+            </p>
             <div class="actions">
                 <a class="button" href="{% url "edit_profile" %}">Edit</a>
                 <a class="button" href="{% url "delete_profile" %}">Delete</a>
