--- a/library_exam/user_profile/templates/user_profile/home-with-profile.html
+++ b/library_exam/user_profile/templates/user_profile/home-with-profile.html
@@ -5,19 +5,24 @@
     <section id="dashboard-page" class="dashboard">
         <h1>Dashboard</h1>
         <!-- Display paragraph: If the user doesn't have any books  -->
-        {% if not books %}
+        {% if not rows %}
             <p class="no-books">No books in database!</p>
-            <!-- Display ul: with list-items for every books if any -->
         {% else %}
-            {% for book in books %}
+
+            {% for row in rows %}
+                <!-- Display ul: with list-items for every books if any -->
                 <ul class="my-books-list">
-                    <li class="myBooks">
-                        <h3>{{ book.title }}</h3>
-                        <p>Type: {{ book.type }}</p>
-                        <p class="img"><img src="{{ book.image }}"
-                                            alt="https://images-na.ssl-images-amazon.com/images/I/81Z-yHX8OcL.jpg"></p>
-                        <a class="button" href="{% url "book_details" book.pk %}">Details</a>
-                    </li>
+
+                    {% for book in row %}
+                        <li class="myBooks">
+                            <h3>{{ book.title }}</h3>
+                            <p>Type: {{ book.type }}</p>
+                            <p class="img"><img src="{{ book.image }}" alt="{{ book.title }}-image">
+                            </p>
+                            <a class="button" href="{% url 'book_details' book.pk %}">Details</a>
+                        </li>
+                    {% endfor %}
+
                 </ul>
             {% endfor %}
         {% endif %}
