fixed book forms, views & html's

--- a/library_exam/book/templates/book/add-book.html
+++ b/library_exam/book/templates/book/add-book.html
@@ -3,7 +3,7 @@
 
     <!-- Add Book Page -->
     <section id="create-page" class="create">
-        <form id="create-form" action="" method="POST">
+        <form id="create-form" action="{% url "add_book" %}" method="POST">
             {% csrf_token %}
             <fieldset>
                 <legend>Add New Book</legend>
