--- a/library_exam/book/templates/book/delete-book.html
+++ b/library_exam/book/templates/book/delete-book.html
@@ -2,7 +2,7 @@
 {% block content %}
     <!-- Edit Book Page -->
     <section id="edit-page" class="edit">
-        <form id="edit-form" action="" method="POST">
+        <form id="edit-form" action="{% url "delete_book" book.pk %}" method="POST">
             {% csrf_token %}
             <fieldset>
                 {{ form }}
