--- a/library_exam/user_profile/templates/user_profile/delete-profile.html
+++ b/library_exam/user_profile/templates/user_profile/delete-profile.html
@@ -2,7 +2,7 @@
 {% block content %}
     <!-- Edit Profile Page -->
     <section id="edit-profile-page" class="edit">
-        <form id="edit-form" action="" method="POST">
+        <form id="edit-form" action="{% url "delete_profile" %}" method="POST">
             {% csrf_token %}
             <fieldset>
                 <legend>Delete Profile</legend>
